implementacion_semantica/src/c_ast_descendente/ASTS_D.java
/* Generated By:JavaCC: Do not edit this line. ASTS_D.java */
package c_ast_descendente;

import asint.SintaxisAbstractaEval.*;
import asint.ClaseSemanticaEval;

public class ASTS_D implements ASTS_DConstants {
    private ClaseSemanticaEval sem = new ClaseSemanticaEval();

        public void setTabSize() {
      jj_input_stream.setTabSize(1);
    }

  final public Prog analiza() throws ParseException {
    trace_call("analiza");
    try {
                  Prog prog;
      prog = programa();
      jj_consume_token(0);
                         {if (true) return prog;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("analiza");
    }
  }

  final public Prog programa() throws ParseException {
    trace_call("programa");
    try {
                  Decs decOpt; InstrOpt instrOpt;
      jj_consume_token(41);
      decOpt = declaraciones_opt();
      instrOpt = instrucciones_opt();
      jj_consume_token(42);
                         {if (true) return sem.prog(decOpt, instrOpt);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("programa");
    }
  }

  final public Decs declaraciones_opt() throws ParseException {
    trace_call("declaraciones_opt");
    try {
                  LDecs ldecs;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ent:
      case real:
      case bool:
      case string:
      case proc:
      case struct:
      case type:
      case identificador:
      case 46:
        ldecs = lista_declaraciones();
        jj_consume_token(cambioSec);
                         {if (true) return sem.si_decs(ldecs);}
        break;
      default:
        jj_la1[0] = jj_gen;
                         {if (true) return sem.no_decs();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaraciones_opt");
    }
  }

  final public LDecs lista_declaraciones() throws ParseException {
    trace_call("lista_declaraciones");
    try {
                  Dec dec; LDecs ldecs;
      dec = declaracion();
      ldecs = lista_declaraciones_re(sem.una_dec(dec));
                          {if (true) return ldecs;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_declaraciones");
    }
  }

  final public LDecs lista_declaraciones_re(LDecs ldech) throws ParseException {
    trace_call("lista_declaraciones_re");
    try {
                  Dec dec; LDecs ldecs;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 43:
        jj_consume_token(43);
        dec = declaracion();
        ldecs = lista_declaraciones_re(sem.muchas_decs(ldech,dec));
                         {if (true) return ldecs;}
        break;
      default:
        jj_la1[1] = jj_gen;
                         {if (true) return ldech;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_declaraciones_re");
    }
  }

  final public Dec declaracion() throws ParseException {
    trace_call("declaracion");
    try {
                  Dec dec;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ent:
      case real:
      case bool:
      case string:
      case struct:
      case identificador:
      case 46:
        dec = declaracion_variable();
                         {if (true) return dec;}
        break;
      case type:
        dec = declaracion_tipo();
                         {if (true) return dec;}
        break;
      case proc:
        dec = declaracion_proc();
                         {if (true) return dec;}
        break;
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion");
    }
  }

  final public Dec declaracion_variable() throws ParseException {
    trace_call("declaracion_variable");
    try {
                 Tipo tipo; Token id;
      tipo = tipo();
      id = jj_consume_token(identificador);
                          {if (true) return (Dec)sem.dec_id(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion_variable");
    }
  }

  final public Dec declaracion_tipo() throws ParseException {
    trace_call("declaracion_tipo");
    try {
                 Tipo tipo; Token id;
      jj_consume_token(type);
      tipo = tipo();
      id = jj_consume_token(identificador);
                         {if (true) return (Dec)sem.dec_type(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion_tipo");
    }
  }

  final public Tipo tipo() throws ParseException {
    trace_call("tipo");
    try {
                 Tipo tipo1, tipore;
      tipo1 = tipo1();
      tipore = tipo_re(tipo1);
                         {if (true) return tipore;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo");
    }
  }

  final public Tipo tipo_re(Tipo tipoh) throws ParseException {
    trace_call("tipo_re");
    try {
                 Token ent; Tipo tipo_re;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 44:
        jj_consume_token(44);
        ent = jj_consume_token(literal_entero);
        jj_consume_token(45);
        tipo_re = tipo_re((Tipo)sem.tipo_array(tipoh, ent.image).ponFila(ent.beginLine).ponCol(ent.beginColumn));
                         {if (true) return tipo_re;}
        break;
      default:
        jj_la1[3] = jj_gen;
                         {if (true) return tipoh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo_re");
    }
  }

  final public Tipo tipo1() throws ParseException {
    trace_call("tipo1");
    try {
                  Tipo tipo2;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 46:
        jj_consume_token(46);
        tipo2 = tipo1();
                         {if (true) return sem.tipo_punt(tipo2);}
        break;
      case ent:
      case real:
      case bool:
      case string:
      case struct:
      case identificador:
        tipo2 = tipo2();
                         {if (true) return tipo2;}
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo1");
    }
  }

  final public Tipo tipo2() throws ParseException {
    trace_call("tipo2");
    try {
                 Tipo tip; Token id;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ent:
        jj_consume_token(ent);
                         {if (true) return sem.tipo_int();}
        break;
      case real:
        jj_consume_token(real);
                         {if (true) return sem.tipo_real();}
        break;
      case bool:
        jj_consume_token(bool);
                         {if (true) return sem.tipo_bool();}
        break;
      case string:
        jj_consume_token(string);
                         {if (true) return sem.tipo_string();}
        break;
      case identificador:
        id = jj_consume_token(identificador);
                         {if (true) return (Tipo)sem.tipo_id(id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
      case struct:
        tip = tipo_struct();
                         {if (true) return tip;}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo2");
    }
  }

  final public Tipo tipo_struct() throws ParseException {
    trace_call("tipo_struct");
    try {
                 LStruct lstruct;
      jj_consume_token(struct);
      jj_consume_token(41);
      lstruct = lista_struct();
      jj_consume_token(42);
                         {if (true) return sem.tipo_struct(lstruct);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("tipo_struct");
    }
  }

  final public LStruct lista_struct() throws ParseException {
    trace_call("lista_struct");
    try {
                 LStruct lstruct; Campo campo;
      campo = campo();
      lstruct = lista_struct_re(sem.info_struct(campo));
                         {if (true) return lstruct;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_struct");
    }
  }

  final public LStruct lista_struct_re(LStruct lstructh) throws ParseException {
    trace_call("lista_struct_re");
    try {
                 LStruct lstruct; Campo campo;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 47:
        jj_consume_token(47);
        campo = campo();
        lstruct = lista_struct_re(sem.lista_struct(lstructh, campo));
                         {if (true) return lstruct;}
        break;
      default:
        jj_la1[6] = jj_gen;
                         {if (true) return lstructh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_struct_re");
    }
  }

  final public Campo campo() throws ParseException {
    trace_call("campo");
    try {
                 Tipo tipo; Token id;
      tipo = tipo();
      id = jj_consume_token(identificador);
                         {if (true) return (Campo)sem.campo(tipo, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("campo");
    }
  }

  final public Dec declaracion_proc() throws ParseException {
    trace_call("declaracion_proc");
    try {
                 Token id; ParamF paramf; Prog prog;
      jj_consume_token(proc);
      id = jj_consume_token(identificador);
      jj_consume_token(48);
      paramf = parametros_formales();
      jj_consume_token(49);
      prog = programa();
                         {if (true) return (Dec) sem.dec_proc(id.image, paramf, prog).ponFila(id.beginLine).ponCol(id.beginColumn);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("declaracion_proc");
    }
  }

  final public ParamF parametros_formales() throws ParseException {
    trace_call("parametros_formales");
    try {
                 LParam lparam;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ent:
      case real:
      case bool:
      case string:
      case struct:
      case identificador:
      case 46:
        lparam = lista_parametros();
                         {if (true) return sem.si_parF(lparam);}
        break;
      default:
        jj_la1[7] = jj_gen;
                         {if (true) return sem.no_parF();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametros_formales");
    }
  }

  final public LParam lista_parametros() throws ParseException {
    trace_call("lista_parametros");
    try {
                 Param param; LParam lparam;
      param = parametro();
      lparam = lista_parametros_re(sem.un_param(param));
                          {if (true) return lparam;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_parametros");
    }
  }

  final public LParam lista_parametros_re(LParam lparamh) throws ParseException {
    trace_call("lista_parametros_re");
    try {
                  Param param; LParam lparam;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 47:
        jj_consume_token(47);
        param = parametro();
        lparam = lista_parametros_re(sem.muchos_param(lparamh, param));
                         {if (true) return lparam;}
        break;
      default:
        jj_la1[8] = jj_gen;
                         {if (true) return lparamh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_parametros_re");
    }
  }

  final public Param parametro() throws ParseException {
    trace_call("parametro");
    try {
                 Tipo tipo; Param param;
      tipo = tipo();
      param = parametro_re(tipo);
                         {if (true) return param;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametro");
    }
  }

  final public Param parametro_re(Tipo tipoh) throws ParseException {
    trace_call("parametro_re");
    try {
                 Token id;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case identificador:
        id = jj_consume_token(identificador);
                         {if (true) return (Param)sem.param_cop(tipoh, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
      case 50:
        jj_consume_token(50);
        id = jj_consume_token(identificador);
                         {if (true) return (Param)sem.param_ref(tipoh, id.image).ponFila(id.beginLine).ponCol(id.beginColumn);}
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("parametro_re");
    }
  }

  final public InstrOpt instrucciones_opt() throws ParseException {
    trace_call("instrucciones_opt");
    try {
                 LInstr linstr;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case If:
      case While:
      case New:
      case Delete:
      case read:
      case write:
      case nl:
      case call:
      case 41:
      case 51:
        linstr = lista_instrucciones();
                         {if (true) return sem.si_inst(linstr);}
        break;
      default:
        jj_la1[10] = jj_gen;
                         {if (true) return sem.no_inst();}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instrucciones_opt");
    }
  }

  final public LInstr lista_instrucciones() throws ParseException {
    trace_call("lista_instrucciones");
    try {
                 Instr inst; LInstr linstr;
      inst = instruccion();
      linstr = lista_instrucciones_re(sem.una_instr(inst));
                         {if (true) return linstr;}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_instrucciones");
    }
  }

  final public LInstr lista_instrucciones_re(LInstr linstrh) throws ParseException {
    trace_call("lista_instrucciones_re");
    try {
                 Instr inst; LInstr linstr;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 43:
        jj_consume_token(43);
        inst = instruccion();
        linstr = lista_instrucciones_re(sem.muchas_instr(linstrh, inst));
                         {if (true) return linstr;}
        break;
      default:
        jj_la1[11] = jj_gen;
                         {if (true) return linstrh;}
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("lista_instrucciones_re");
    }
  }

  final public Instr instruccion() throws ParseException {
    trace_call("instruccion");
    try {
                  Instr instr;
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        instr = instruccion_eval();
                         {if (true) return instr;}
        break;
      case If:
        instr = instruccion_if();
                         {if (true) return instr;}
        break;
      case While:
        instr = instruccion_while();
                         {if (true) return instr;}
        break;
      case read:
        instr = instruccion_read();
                         {if (true) return instr;}
        break;
      case write:
        instr = instruccion_write();
                         {if (true) return instr;}
        break;
      case nl:
        instr = instruccion_nl();
                         {if (true) return instr;}
        break;
      case New:
        instr = instruccion_reserva();
                         {if (true) return instr;}
        break;
      case Delete:
        instr = instruccion_libera();
                         {if (true) return instr;}
        break;
      case call:
        instr = instruccion_call();
                         {if (true) return instr;}
        break;
      case 41:
        instr = instruccion_compuesta();
                         {if (true) return instr;}
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instruccion");
    }
  }

  final public Instr instruccion_eval() throws ParseException {
    trace_call("instruccion_eval");
    try {
                 Exp exp;
      jj_consume_token(51);
      exp = E0();
                          {if (true) return sem.instr_eval(exp);}
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("instruccion_eval");
    }
  }
